--- a/external/styles/styles.css
+++ b/external/styles/styles.css
@@ -13,7 +13,24 @@ navbar {
   top: 0;
   z-index: 1;
 }
-body, .full {
+
+.search {
+  width: 400px;
+  margin: 15px 15px 15px 30px;
+}
+div.packageInfo {
+  width: 350px;
+  position: absolute;
+  top: 55px;
+  left: 30px;
+  padding: 11px 13px;
+  background-color: white;
+  border-radius: 2px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3),0 -3px 8px rgba(0, 0, 0, 0.2);
+}
+
+body,
+.full {
   width: 100%;
   height: 100%;
 }
@@ -22,7 +39,33 @@ body, .full {
   position: absolute;
   left: 0;
   top: 0;
+  width: 100%;
+  height: 100%;
 }
+
+.graphView > svg {
+  width: 100%;
+  height: 100%;
+}
+
+.sidebar {
+  position: absolute;
+  top: 50px;
+  left: 20;
+  width: 320px;
+  height: 200px
+  overflow-y: auto;
+}
+
+.divider {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.no-shadow {
+  box-shadow: none;
+}
+
 body {
   position: absolute;
   overflow: hidden;
