Moved to gulp as a build system

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,3 +1,12 @@
+@import "../../node_modules/twitter-bootstrap-3.0.0/less/bootstrap.less";
+
+navbar {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+
 .typeahead-container ul {
   width: 300px;
   overflow: hidden;
@@ -5,13 +14,6 @@
 
 .typeahead-container ul>li>a {
   white-space: normal;
-}
-
-navbar {
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 1;
 }
 
 .search {
@@ -60,7 +62,7 @@ body,
   top: 50px;
   left: 20;
   width: 320px;
-  height: 200px
+  height: 200px;
   overflow-y: auto;
 }
 
