--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -17,30 +17,68 @@ navbar {
 }
 
 .search {
-  width: 400px;
+  width: 300px;
   margin: 15px 15px 15px 30px;
+  input {
+    border: 0;
+    border-radius: 0;
+  }
+  button {
+    background: #C6C4DA;
+  }
 }
 
-.typeahead-container {
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3),0 4px 15px -5px rgba(0, 0, 0, 0);
-  border-radius: 4px;
+button.btn {
+  border-radius: 0;
 }
 
 div.packageInfo {
-  width: 350px;
+  width: 300px;
   position: absolute;
   top: 52px;
   left: 31px;
-  padding: 11px 13px;
-  background-color: white;
-  border-radius: 2px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3),0 -3px 8px rgba(0, 0, 0, 0.2);
+  padding: 11px 0;
+
+  a {
+    color: #52CCE3;
+    font-size: 18px;
+  }
+  p {
+    color: #CFCCDF;
+  }
+  hr {
+    display: block; height: 1px;
+    border: 0; border-top: 1px solid #5B5E6F;
+    margin: 1em 0; padding: 0;
+  }
+  pre {
+    border-radius: 0;
+    background-color: transparent;
+    border: 0;
+    color: #838197;
+  }
+  ::-moz-selection { /* Code for Firefox */
+      color: red;
+      background: yellow;
+  }
+
+  ::selection {
+      color: red; 
+      background: yellow;
+  }
 }
 
-body,
-.full {
+.full  {
   width: 100%;
   height: 100%;
+}
+
+body {
+  background-color: #36394A;
+  position: absolute;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .graphView {
@@ -49,12 +87,9 @@ body,
   top: 0;
   width: 100%;
   height: 100%;
-}
-
-.graphView > svg {
-  width: 100%;
-  height: 100%;
-  background-color: #36394A;
+  svg {
+    .full;
+  }
 }
 
 .sidebar {
@@ -79,9 +114,4 @@ body,
   position: absolute;
   bottom: 15px;
   left: 30px;
-}
-
-body {
-  position: absolute;
-  overflow: hidden;
 }
