--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,4 +1,5 @@
 @import "../../node_modules/twitter-bootstrap-3.0.0/less/bootstrap.less";
+@import "./variables.less";
 
 navbar {
   position: absolute;
@@ -44,7 +45,7 @@ div.packageInfo {
     font-size: 18px;
   }
   p {
-    color: #CFCCDF;
+    color: @primary-color;
   }
   hr {
     display: block; height: 1px;
@@ -55,7 +56,11 @@ div.packageInfo {
     border-radius: 0;
     background-color: transparent;
     border: 0;
-    color: #838197;
+    color: @secondary-color;
+  }
+  .version {
+    color: @secondary-color;
+    float: right;
   }
   ::-moz-selection { /* Code for Firefox */
       color: red;
