Show count per user

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -67,12 +67,9 @@ div.packageInfo {
     margin-right: 4px;
     position: relative;
     overflow: visible;
-    margin-left: -25px;
-    width: 50px;
   }
 
   .maintainersContainer {
-    margin-left: 25px;
   }
 
   .nodes {
@@ -88,12 +85,17 @@ div.packageInfo {
     color: @acent-color;
   }
 .packagesCount {
-top: 0;
-right: 0;
-font-size: 24px;
+top: 29px;
+right: -12px;
+font-size: 21px;
 position: absolute;
 z-index: 1;
-display: none;
+overflow: visible;
+white-space: nowrap;
+background: #36394A;
+width: 47px;
+height: 25px;
+text-align: center;
 }
   ::-moz-selection { /* Code for Firefox */
       color: red;
