--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -2,4 +2,6 @@
 @secondary-color: #838197;
 @border-color: #5B5E6F;
 @acent-color: #52CCE3;
+@link-color: #E0DE0F;
 @scene-background: #36394A;
+@button-color: #C6C4DA;
