Switched cursor for selected/non selected

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -111,12 +111,14 @@ div.infoBox {
   .header {
     margin: 12px 0;
     a {
-      color: @acent-color;
+      color: @primary-color;
       float: left;
       font-size: 22px;
     }
     a.selected {
-      color: @primary-color;
+      color: @acent-color;
+      text-decoration: none;
+      cursor: default;
     }
     a.last {
       float:right;
