Changed highlight color

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -131,13 +131,13 @@ div.infoBox {
   }
 
   ::-moz-selection { /* Code for Firefox */
-      color: red;
-      background: yellow;
+      color: @link-color;
+      background: @acent-color;
   }
 
   ::selection {
-      color: red;
-      background: yellow;
+      color: @link-color;
+      background: @acent-color;
   }
 
   div.packageInfo {
