Keep license row highlighted

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -136,6 +136,9 @@ div.infoBox {
           text-decoration: none;
         }
       }
+      &.selected {
+        color: @acent-color;
+      }
     }
 
     .license-row {
