Reset scrolltop when exiting from details view

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -295,12 +295,14 @@ a.hide-info-box {
   }
 
   .share {
-    bottom: 12px;
+    bottom: 0;
+    right: 0;
     font-size: 12px;
     width: 100%;
     text-align: center;
     top: inherit;
     padding-left: 19px;
+    background-color: @scene-background;
 
     p {
       display: inline-block;
@@ -321,9 +323,9 @@ a.hide-info-box {
   div.infoBox {
     width: 100%;
     top: inherit;
-    bottom: 27px;
-    height: 68px;
-    padding: 12px;
+    bottom: 16px;
+    height: 56px;
+    padding: 0 12px 12px 12px;
     border-right: 0px;
     overflow-y: hidden;
     .header {
